# cloneholio

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.rst  cloneholio.py  pyproject.toml  setup.cfg  setup.py
cloneholio/: __main__.py  github.py  gitlab.py
tests/: test_cli.py  test_github.py
