
[project]
name = "cloneholio"
version = "0.13.1"
description = "I am cloneholio! I need syncing of my repos."
readme = "README.rst"
authors = [
    {name = "Andrew Rabert", email = "ar@nullsum.net"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.6"
dependencies = [
    "arrow",
    "gitpython",
    "pygithub",
    "requests",
    "tqdm",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://gitlab.com/nvllsvm/cloneholio"

[project.scripts]
cloneholio = "cloneholio.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
